--- a/deeplearning1/nbs/lesson4.ipynb
+++ b/deeplearning1/nbs/lesson4.ipynb
@@ -2,18 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using gpu device 0: Tesla K80 (CNMeM is disabled, cuDNN 5103)\n",
-      "/home/ubuntu/anaconda2/lib/python2.7/site-packages/theano/sandbox/cuda/__init__.py:600: UserWarning: Your cuDNN version is more recent than the one Theano officially supports. If you see any problems, try updating Theano or downgrading cuDNN to version 5.\n",
-      "  warnings.warn(warn)\n"
+      "WARNING (theano.sandbox.cuda): The cuda backend is deprecated and will be removed in the next release (v0.10).  Please switch to the gpuarray backend. You can get more information about how to switch at this URL:\n",
+      " https://github.com/Theano/Theano/wiki/Converting-to-the-new-gpu-back-end%28gpuarray%29\n",
+      "\n",
+      "ERROR (theano.sandbox.cuda): ERROR: Not using GPU. Initialisation of device gpu failed:\n",
+      "initCnmem: cnmemInit call failed! Reason=CNMEM_STATUS_OUT_OF_MEMORY. numdev=1\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Cuda error: kernel_reduce_ccontig_node_544270fe7a21a748315f83abfe0913cc_0: out of memory. (grid: 1 x 1; block: 256 x 1 x 1)\n\nApply node that caused the error: GpuCAReduce{add}{1}(<CudaNdarrayType(float32, vector)>)\nToposort index: 0\nInputs types: [CudaNdarrayType(float32, vector)]\nInputs shapes: [(10000,)]\nInputs strides: [(1,)]\nInputs values: ['not shown']\nOutputs clients: [[HostFromGpu(GpuCAReduce{add}{1}.0)]]\n\nHINT: Re-running with most Theano optimization disabled could give you a back-trace of when this node was created. This can be done with by setting the Theano flag 'optimizer=fast_compile'. If that does not work, Theano optimizations can be disabled with 'optimizer=None'.\nHINT: Use the Theano flag 'exception_verbosity=high' for a debugprint and storage map footprint of this apply node.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-64e06ef83093>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mtheano\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msandbox\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcuda\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/home/png/.pyenv/versions/2.7.12/envs/fastai-courses/lib/python2.7/site-packages/theano/__init__.pyc\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    114\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    115\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mconfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menable_initial_driver_test\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 116\u001b[0;31m             \u001b[0mtheano\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msandbox\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtest_driver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtest_nvidia_driver1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    117\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    118\u001b[0m if (config.device.startswith('cuda') or\n",
+      "\u001b[0;32m/home/png/.pyenv/versions/2.7.12/envs/fastai-courses/lib/python2.7/site-packages/theano/sandbox/cuda/tests/test_driver.pyc\u001b[0m in \u001b[0;36mtest_nvidia_driver1\u001b[0;34m()\u001b[0m\n\u001b[1;32m     38\u001b[0m              'but got:'] + [str(app) for app in topo])\n\u001b[1;32m     39\u001b[0m         \u001b[0;32mraise\u001b[0m \u001b[0mAssertionError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 40\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mallclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     41\u001b[0m         raise Exception(\"The nvidia driver version installed with this OS \"\n\u001b[1;32m     42\u001b[0m                         \u001b[0;34m\"does not give good results for reduction.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/png/.pyenv/versions/2.7.12/envs/fastai-courses/lib/python2.7/site-packages/theano/compile/function_module.pyc\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    896\u001b[0m                     \u001b[0mnode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnodes\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mposition_of_error\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    897\u001b[0m                     \u001b[0mthunk\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mthunk\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 898\u001b[0;31m                     storage_map=getattr(self.fn, 'storage_map', None))\n\u001b[0m\u001b[1;32m    899\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    900\u001b[0m                 \u001b[0;31m# old-style linkers raise their own exceptions\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/png/.pyenv/versions/2.7.12/envs/fastai-courses/lib/python2.7/site-packages/theano/gof/link.pyc\u001b[0m in \u001b[0;36mraise_with_op\u001b[0;34m(node, thunk, exc_info, storage_map)\u001b[0m\n\u001b[1;32m    323\u001b[0m         \u001b[0;31m# extra long error message in that case.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    324\u001b[0m         \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 325\u001b[0;31m     \u001b[0mreraise\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexc_type\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexc_value\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexc_trace\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    326\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    327\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/png/.pyenv/versions/2.7.12/envs/fastai-courses/lib/python2.7/site-packages/theano/compile/function_module.pyc\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    882\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    883\u001b[0m             \u001b[0moutputs\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 884\u001b[0;31m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0moutput_subset\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mNone\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    885\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput_subset\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0moutput_subset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    886\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Cuda error: kernel_reduce_ccontig_node_544270fe7a21a748315f83abfe0913cc_0: out of memory. (grid: 1 x 1; block: 256 x 1 x 1)\n\nApply node that caused the error: GpuCAReduce{add}{1}(<CudaNdarrayType(float32, vector)>)\nToposort index: 0\nInputs types: [CudaNdarrayType(float32, vector)]\nInputs shapes: [(10000,)]\nInputs strides: [(1,)]\nInputs values: ['not shown']\nOutputs clients: [[HostFromGpu(GpuCAReduce{add}{1}.0)]]\n\nHINT: Re-running with most Theano optimization disabled could give you a back-trace of when this node was created. This can be done with by setting the Theano flag 'optimizer=fast_compile'. If that does not work, Theano optimizations can be disabled with 'optimizer=None'.\nHINT: Use the Theano flag 'exception_verbosity=high' for a debugprint and storage map footprint of this apply node."
      ]
     }
    ],
@@ -23,19 +40,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using Theano backend.\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "import utils; reload(utils)\n",
@@ -45,11 +52,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'os' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-c55fed3dd4e0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"data/ml-small/\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mmodel_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpath\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'models/'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexists\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmkdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m64\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'os' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#path = \"data/ml-20m/\"\n",
     "path = \"data/ml-small/\"\n",
@@ -80,7 +97,6 @@
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {
-    "collapsed": false,
     "hidden": true,
     "scrolled": true
    },
@@ -162,7 +178,6 @@
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [
@@ -219,7 +234,6 @@
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [],
@@ -254,7 +268,6 @@
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [
@@ -279,7 +292,6 @@
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [
@@ -378,7 +390,6 @@
    "cell_type": "code",
    "execution_count": 76,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [],
@@ -391,7 +402,6 @@
    "cell_type": "code",
    "execution_count": 78,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [],
@@ -404,7 +414,6 @@
    "cell_type": "code",
    "execution_count": 80,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [],
@@ -416,7 +425,6 @@
    "cell_type": "code",
    "execution_count": 81,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [],
@@ -428,7 +436,6 @@
    "cell_type": "code",
    "execution_count": 82,
    "metadata": {
-    "collapsed": false,
     "hidden": true,
     "scrolled": true
    },
@@ -836,7 +843,6 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [],
@@ -945,7 +951,6 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [
@@ -1069,7 +1074,6 @@
    "cell_type": "code",
    "execution_count": 49,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [],
@@ -1086,7 +1090,6 @@
    "cell_type": "code",
    "execution_count": 418,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [
@@ -1122,7 +1125,6 @@
    "cell_type": "code",
    "execution_count": 420,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [
@@ -1158,7 +1160,6 @@
    "cell_type": "code",
    "execution_count": 422,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [
@@ -1182,7 +1183,6 @@
    "cell_type": "code",
    "execution_count": 248,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [
@@ -1265,7 +1265,6 @@
    "cell_type": "code",
    "execution_count": 54,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [
@@ -1329,7 +1328,6 @@
    "cell_type": "code",
    "execution_count": 57,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [],
@@ -1352,7 +1350,6 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [
@@ -1390,7 +1387,6 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [
@@ -1436,7 +1432,6 @@
    "cell_type": "code",
    "execution_count": 59,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [
@@ -1517,7 +1512,6 @@
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [
@@ -1549,7 +1543,6 @@
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [
@@ -1614,7 +1607,6 @@
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [
@@ -1646,7 +1638,6 @@
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {
-    "collapsed": false,
     "hidden": true,
     "scrolled": true
    },
@@ -1712,7 +1703,6 @@
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [
@@ -1745,7 +1735,6 @@
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [
@@ -1856,9 +1845,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "x = merge([u, m], mode='concat')\n",
@@ -1874,9 +1861,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1927,7 +1912,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -1945,5 +1930,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
